--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,42 @@
 Package: GilOG
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it - EDG
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: This package shows how to deal with file input in R Shiny
+Version: 1.0.0
+Authors@R: 
+    person(given = "Edward",
+           family = "Gillian",
+           role = c("aut", "cre"),
+           email = "edwardjgillian@gmail.com",
+           comment = c(ORCID = 0000-0003-2732-5107))
+Description: This package shows how to deal with file input in R Shiny
+Depends: R (>= 3.5.0)
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.1.1
+Imports: 
+    dplyr,
+    tidyr,
+    fontawesome,
+    ggplot2,
+    ggpubr,
+    readr,
+    tibble,
+    knitr,
+    kableExtra,
+    DiagrammeR,
+    purrr,
+    readxl,
+    stringr,
+    magrittr,
+    DT,
+    rlang,
+    rmarkdown,
+    shiny,
+    shinythemes,
+    shinyWidgets,
+    summarytools
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
